worked on AbilityScore Generator and added styling and html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>D&D Character Creator</title>
 </head>
 <body>
-    <script src="assets/script.js"></script>
+    <h1>Ability Score Generator</h1>
+    <button onclick="generateAllAbilityScores()">Roll Ability Scores</button>
+    <div id="scores"></div>
+
+    
+    <script src="./assets/script.js"></script>
 </body>
 </html>
